# buttplugCpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: ButtplugClientConfig.cmake.in
example/: CMakeLists.txt  buttplugCpp.cpp  buttplugCpp.h
include/: buttplugclient.h  helperClasses.h  log.h  messageHandler.h  messages.h
src/: buttplugclient.cpp  log.cpp  messageHandler.cpp  messages.cpp
